--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: latte-dock
 Section: kde
 Priority: optional
 Maintainer: Uri Herrera <uri_herrera@nxos.org>
-Build-Depends: libkf5config-dev, libkdecorations2-dev, libqt5x11extras5-dev, qtdeclarative5-dev, libkf5guiaddons-dev, libkf5configwidgets-dev, libkf5windowsystem-dev, libkf5coreaddons-dev, libkf5iconthemes-dev, frameworkintegration, libkf5kcmutils-dev, libkf5style-dev, libkf5wayland-dev, qtbase5-dev, qtdeclarative5-dev
+Build-Depends: qtbase5-dev, qtdeclarative5-dev
 Standards-Version: 3.9.6
 
 Package: latte-dock
