--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: latte-dock
 Section: kde
 Priority: optional
 Maintainer: Uri Herrera <uri_herrera@nxos.org>
-Build-Depends: qtbase5-dev, qtdeclarative5-dev, libkf5activities-dev, libkf5archive-dev, libkf5coreaddons-dev, libkf5guiaddons-dev, libkf5crash-dev, libkf5dbusaddons-dev, libkf5declarative-dev, libkf5globalaccel-dev, kirigami2-dev, libkf5i18n-dev, libkf5iconthemes-dev, libkf5kio-dev, libkf5newstuff-dev, libkf5notifications-dev, libkf5plasma-dev, libkf5plasmaquick5, libkf5wayland-dev, libkf5windowsystem-dev, libkf5xmlgui-dev, libqt5x11extras5-dev, libxcb-shape0-dev, libxcb-randr0-dev, libxcb-util0-dev, libxcb-keysyms1-dev, qtquickcontrols2-5-dev, plasma-desktop-dev, plasma-framework
+Build-Depends: qtbase5-dev, qtdeclarative5-dev, libkf5activities-dev, libkf5archive-dev, libkf5coreaddons-dev, libkf5guiaddons-dev, libkf5crash-dev, libkf5dbusaddons-dev, libkf5declarative-dev, libkf5globalaccel-dev, kirigami2-dev, libkf5i18n-dev, libkf5iconthemes-dev, libkf5kio-dev, libkf5newstuff-dev, libkf5notifications-dev, libkf5plasma-dev, libkf5plasmaquick5, libkf5wayland-dev, libkf5windowsystem-dev, libkf5xmlgui-dev, libqt5x11extras5-dev, libxcb-shape0-dev, libxcb-randr0-dev, libxcb-util0-dev, libxcb-keysyms1-dev, qtquickcontrols2-5-dev, plasma-desktop-dev, plasma-framework, plasma-workspace-dev
 Standards-Version: 3.9.6
 
 Package: latte-dock
